--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
          <li> Tabular and graphical summary of data</li>
          <li> Study Materials</li>
            <ul>
-              <li> <a href="w01-SummarizingData.pdf" target="popup" 
-                 onclick="window.open('w01-SummarizingData.pdf','name','width=900,height=500')">
+              <li> <a href="notes/w01-descriptiveStatistics.html" target="popup" 
+                 onclick="window.open('notes/w01-descriptiveStatistics.html','name','width=900,height=500')">
                  Descriptive statistics: [Lecture Note]</a> </li>
         
               <li> <a href="w01-assessment.html" target="popup" 
