--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
     <h6 id="week01" class="section" style="text-align:left"><font size = 4><b>Topic 01: Introduction and Logistics</b></font></h6>
 <br>
     <ul>
-         <li> Introduction and logistics </li>
+         <li> <a href="notes/w01-CourseInfoLogistics.html" target="popup" 
+                 onclick="window.open('notes/w01-CourseInfoLogistics.html','name','width=900,height=500')">
+                 Introduction and logistics: [Web link]</a> </li>
          <li> Tabular and graphical summary of data</li>
          <li> Study Materials</li>
            <ul>
