--- a/w01-assessment.html
+++ b/w01-assessment.html
@@ -67,8 +67,8 @@ body{
 
 <!--VVVVVVVVVVVVVVV   Assessment Title Information     VVVVVVVVVVVVVVVV-->
 
-<h4 style="text-align: center; padding-top:10px;padding-bottom:0px;"><b>MAT121 Statistics I</b></h4> 
-<h3 style="text-align: center; padding-top:0px;padding-bottom:10px;"><b>Week #1 Self-assessment</b></h3> 
+<h4 style="text-align: center; padding-top:10px;padding-bottom:0px;"><b>MAT121 Practice Exercise</b></h4> 
+<h3 style="text-align: center; padding-top:0px;padding-bottom:10px;"><b> Frequency Tables and Charts</b></h3> 
 <h5 style="text-align: center; padding-top:0px;padding-bottom:10px;">Instr. C. Peng</h5> 
 
 <!--XXXXXXXXXXXXXXXXXXX inner table: HTML contents XXXXXXXXXXXXXXXXXXXXXX-->
