--- a/notes/w01-CourseInfoLogistics.html
+++ b/notes/w01-CourseInfoLogistics.html
@@ -307,8 +307,6 @@ h3 { /* Header 3 - and the author and data headers use this too  */
 <div id="policies-resources-and-expectations" class="section level1" number="2">
 <h1 number="2"><span class="header-section-number">2</span> Policies, Resources, and Expectations</h1>
 <p>Course policies and expectations on exams and assignments are outlined in the syllabus that is also available online at: <a href="https://pengdsci.github.io/MAT121/w00/MAT121-Summer-2022.pdf" class="uri">https://pengdsci.github.io/MAT121/w00/MAT121-Summer-2022.pdf</a></p>
-<p><br />
-</p>
 </div>
 <div id="textbook" class="section level1" number="3">
 <h1 number="3"><span class="header-section-number">3</span> Textbook</h1>
@@ -317,7 +315,7 @@ h3 { /* Header 3 - and the author and data headers use this too  */
 <p><font color="darkred">The textbook is optional for this class. </font> I will provide self-contained lecture notes that cover all topics outlined in the course description in the catalog. The terminologies and definitions used in the lecture notes are essentially the same as those used in the textbook.</p>
 <p><font color="darkred">However</font>, I don’t discourage to buy the textbook that is required in other sections of the course. If you decide to buy the textbook, you have options to buy either a hard copy, eBook, or a hard copy with an access code to access the eBook.</p>
 <p>If you plan to use the eBook, you need to buy the access code and then follow the instructions in the following document to register for the class:</p>
-<p><a href="https://github.com/pengdsci/MAT121/raw/main/w00/ConnectMathRegistration.pdf"> https://github.com/pengdsci/MAT121/raw/main/w00/ConnectMathRegistration.pdf </a></p>
+<p><a href="https://pengdsci.github.io/MAT121/w00/ConnectMathRegistration.pdf" class="uri">https://pengdsci.github.io/MAT121/w00/ConnectMathRegistration.pdf</a></p>
 <p>I have created the course with ConnectMath. The 10-character code for the class is: <font color="red"><b>W3Y3K-HKGGM</b></font></p>
 <p><br />
 </p>
