--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
                 </ul>
             
             
-          <!--li> <a href="w03-quiz-key.pdf" target="popup" 
-                   onclick="window.open('w03-quiz-key.pdf','name','width=900,height=500')">
-                <font color = "red" size = 4> <b> Answer Key to Week #03 Quiz </b> </font></a-->
+          <li> <a href="notes/Exam01-key.pdf" target="popup" 
+                   onclick="window.open('notes/Exam01-key.pdf','name','width=900,height=500')">
+                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam 01 </b> </font></a>
     </ul> 
 <hr>
 
