--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
        <ul>
             <li>t-tests and paired t-tests [Lecture Note] <br>
                  <a href="notes/w10-t-paired-ttest.html" target="popup" 
-                          onclick="window.open('w10-t-paired-ttest.html','name','width=900,height=500')">
+                          onclick="window.open('notes/w10-t-paired-ttest.html','name','width=900,height=500')">
                          [HTML] </a> <BR>
                  <a href="notes/w10-t-paired-ttest.pdf" target="popup" 
                           onclick="window.open('notes/w10-t-paired-ttest.pdf','name','width=900,height=500')">
