--- a/index.html
+++ b/index.html
@@ -579,6 +579,9 @@
                      <li><font color = "darkblue"><b> Available on Thursday</b>: 12:00 PM. </font> </li>    
                      <li><font color = "red"><b> Due on Sunday </b>: 11:30 PM </font></li>
                 </ul>
+               <li> <a href="notes/Exam03-key.pdf" target="popup" 
+                   onclick="window.open('notes/Exam03-key.pdf','name','width=900,height=500')">
+                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam 03 </b> </font></a>
      </ul> 
 <hr>
 
@@ -726,9 +729,9 @@
                 </ul>
             
             
-          <li> <a href="notes/Exam03-key.pdf" target="popup" 
+          <!--li> <a href="notes/Exam03-key.pdf" target="popup" 
                    onclick="window.open('notes/Exam03-key.pdf','name','width=900,height=500')">
-                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam 03 </b> </font></a>
+                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam 03 </b> </font></a-->
      </ul> 
 <hr>
 
