--- a/index.html
+++ b/index.html
@@ -722,9 +722,9 @@
                 </ul>
             
             
-          <!--li> <a href="notes/Exam04-key.pdf" target="popup" 
+          <li> <a href="notes/Exam04-key.pdf" target="popup" 
                    onclick="window.open('notes/Exam03-key.pdf','name','width=900,height=500')">
-                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam 03 </b> </font></a-->
+                <font color = "blue" size = 4> <b> Answer Key to Weekly Exam #4 </b> </font></a>
      </ul> 
 
 <hr>
