--- a/index.html
+++ b/index.html
@@ -853,7 +853,16 @@
 <hr>
  <center><font color ="darkred" size = 5><b> FINAL EXAM INFORMATION</b></font></center>  
  <hr> 
-
+<br>
+<br>
+ <li>Final Exam Review Note<br>
+                 <a href="notes/w14-ExampleReview.html" target="popup" 
+                          onclick="window.open('notes/w14-ExampleReview.html','name','width=900,height=500')">
+                         [HTML] </a> <BR>
+                 <a href="notes/w14-ExampleReview.pdf" target="popup" 
+                          onclick="window.open('notes/w14-ExampleReview.pdf','name','width=900,height=500')">
+                         [PDF] </a></li>    
+<br>
 <br>
 According to the University Calendar for Summer Session I, the final exam of this class will be held on Sunday, July 3. The detailed information about the exam is outlined below.<br><br>     
 
