--- a/index.html
+++ b/index.html
@@ -855,13 +855,13 @@
  <hr> 
 <br>
 <br>
- <li>Final Exam Review Note<br>
+ <center><font color = "darkred"><b>Final Exam Review Note</b></font><br>
                  <a href="notes/w14-ExampleReview.html" target="popup" 
                           onclick="window.open('notes/w14-ExampleReview.html','name','width=900,height=500')">
                          [HTML] </a> <BR>
                  <a href="notes/w14-ExampleReview.pdf" target="popup" 
                           onclick="window.open('notes/w14-ExampleReview.pdf','name','width=900,height=500')">
-                         [PDF] </a></li>    
+                         [PDF] </a></center>   
 <br>
 <br>
 According to the University Calendar for Summer Session I, the final exam of this class will be held on Sunday, July 3. The detailed information about the exam is outlined below.<br><br>     
