--- a/notes/w01-CourseInfoLogistics.html
+++ b/notes/w01-CourseInfoLogistics.html
@@ -299,8 +299,8 @@ h3 { /* Header 3 - and the author and data headers use this too  */
 </p>
 <div id="introduction-coverage" class="section level1" number="1">
 <h1 number="1"><span class="header-section-number">1</span> Introduction Coverage</h1>
-<p>This is a 100% online course. <font color="blue"><b>This means that we will NOT hold scheduled meetings</b></font>. You have the flexibility to choose your own learning pace, comfortable environment, and convenient times to <font color="red"><b> complete the weekly materials and exams in a timely manner. </b></font></p>
-<p>Please note that an online course usually requires more time than in-person classes. It also makes it easier to procrastinate. It requires you to have good time-management skills and to be an active and responsible learner.</p>
+<p>This is a 100% in-person course. <font color="blue"><b>This means that we will hold scheduled meetings every Tuesdays and Thursdays</b></font>.</p>
+<p>Class attending is mandatory class. I will take random attendance and use only these attendance results to assign the 5% of the course grade. If the final exam scores must be curved, I will also use it to assign the weight in curving your final exam. <strong>Based on my past experience, attendance rate is highly correlated with your overall performance in the class</strong>.</p>
 <p><br />
 </p>
 </div>
