--- a/notes/w01-CourseInfoLogistics.html
+++ b/notes/w01-CourseInfoLogistics.html
@@ -323,7 +323,7 @@ h3 { /* Header 3 - and the author and data headers use this too  */
 <font color="blue"><b>The class code: JKT3D-WDYCD</b></font>
 </center>
 <p><br></p>
-<p><strong>Please stay focused on the lecture notes, practice exercises, and interactive apps</strong>. The textbook has 700 + pages. The topics to be covered in the course are scattered over 14 chapters. I don’t expect you to read nearly 600 pages in five weeks. However, the textbook is an excellent resource you can use to find more examples and exercises if you need to practice more.</p>
+<p><strong>Please stay focused on lecture notes (condensed representations of the required topics), practice exercises, and interactive apps</strong>. The textbook has 600 + pages. The topics to be covered in the course spread over 14 chapters. I don’t expect you to read 600+ pages in 14 weeks. However, the textbook is an excellent resource you can use to find more examples and exercises if you need to practice more.</p>
 <p><br />
 </p>
 </div>
