--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                    <ul class="dropdown-menu">
                      <b>Free Tutoring</b><BR>
                      <li class="navitem active"> <a href="https://www.wcupa.edu/universityCollege/larc/"  target="popup" onclick="window.open('https://www.wcupa.edu/universityCollege/larc/','name','width=900,height=500')"  class="dropdown-item">WCU LARC</a></li>
-                    <li class="navitem active"> <a href=""  target="popup" onclick="window.open('','name','width=900,height=500')"  class="dropdown-item">Math Dept Tutoring (TBA)</a></li>
+                    <li class="navitem active"> <a href="STATGAOfficeHoursFall2022.pdf"  target="popup" onclick="window.open('STATGAOfficeHoursFall2022.pdf','name','width=900,height=500')"  class="dropdown-item">Math Dept Tutoring (<font color = "red">New!</font>)</a></li>
                      </ul>
                </li>
          
