--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@
             <ul>
                      <li> <a href="https://wcupeng.shinyapps.io/DescriptiveStats/"  target="popup" onclick="window.open('https://wcupeng.shinyapps.io/DescriptiveStats/','name','width=900,height=500')" >Descriptive Stat</a></li> 
              </ul> 
+            <li> <font color = "blue">Answer key to this week's quiz</font></li>
+            <ul>
+                     <li> <a href="HW/week01-quiz-key.pdf"  target="popup" onclick="HW/week01-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key</font></a></li> 
+             </ul> 
+        
     </ul>
 
 <hr>
