--- a/index.html
+++ b/index.html
@@ -561,16 +561,17 @@
 <hr>
 
 <ul>
+   <li> Confidence interval for proportions </li>    
+     <ul>
+        <li> Sampling distribution of sample proportion</li>
+        <li> Confidence interval of proportion</li>
+    </ul>
    <li> Confidence interval of normal population mean - t confidence intervals </li>
     <ul>
-      <li> Test statistic - unknown population variance</li>
       <li>  Sampling distribution of the test statistic: t-distribution</li>
+      <li>  CI for normal population mean with unknown population variance</li>
     </ul>
-   <li> Confidence interval for proportions </li>    
-    <ul>
-      <li> Formulation of the test statistic</li>
-      <li> Sampling distribution</li>
-    </ul>
+
    <li> Study Materials</li>
            <ul>
             <li>CI for normal population mean and population proportions [Lecture Note] <br>
