--- a/index.html
+++ b/index.html
@@ -912,8 +912,8 @@
         <br><center><font size = 3 color = "blue">[12/8]</font></center></h6>
 <hr>
    <ul>
-       <li> <a href="notes/w14-ExampleReview.pdf.pdf" target="popup" 
-          onclick="window.open('notes/w14-ExampleReview.pdf.pdf','name','width=900,height=500')">
+       <li> <a href="notes/w14-ExampleReview.pdf" target="popup" 
+          onclick="window.open('notes/w14-ExampleReview.pdf','name','width=900,height=500')">
                          Final Exam Checklist </a></li>
     </ul> 
     
