--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <ul>
               <li> <b>Available on D2L:</b> 12:00 PM, Thursday</li>
               <li> <b>Due:</b> 11:30 PM, Sunday</li>
-                     <li> <a href="HW/week01-quiz-key.pdf"  target="popup" onclick="HW/week01-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key</b></font></a></li> 
+                     <li> <a href="HW/week01-quiz-key.pdf"  target="popup" onclick="HW/week01-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Weekly Quiz #1</b></font></a></li> 
               </ul>   
     </ul>
 
@@ -364,7 +364,7 @@
              <ul>
                <li> <b>Available on D2L:</b> 12:00 PM, Thursday</li>
               <li> <b>Due:</b> 11:30 PM, Sunday</li>
-                     <!--li> <a href="HW/week04-quiz-key.pdf"  target="popup" onclick="HW/week04-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key</font></a></li--> 
+                     <li> <a href="HW/week02-quiz.pdf"  target="popup" onclick="HW/week02-quiz.pdf','name','width=900,height=500')" ><font color = "red">Answer Key to Weekly Quiz #2</font></a></li> 
               </ul>   
      
     </ul> 
