--- a/w03-assessment.html
+++ b/w03-assessment.html
@@ -108,7 +108,7 @@ Define event E = event exactly three tails are tossed.
 <font color = "red">
 <span  onclick="toggle_visibility('q1');" class="view"><font color = "blue"><b>View Answer</b></font></span>
 <div id="q1" class="showanswer" style="display: none;" > <b>Ans</b> : C <br/>
-<p> <b>Explanation</b>: The category with the highest vertical bar was the most money spent.</p></div><br/>
+<p> <b>Explanation</b>: This based on the definition of an event: all outcomes in the sample space that meet ths condition of having EAXACTLY 3 tails.</p></div><br/>
 </p>
 </font>
 </p>
@@ -173,7 +173,7 @@ D) 1926 <BR>
 <font color = "red">
 <span  onclick="toggle_visibility('q3');" class="view"><font color = "blue"><b>View Answer</b></font></span>
 <div id="q3" class="showanswer" style="display: none;" > <b>Ans</b> : D <br/>
-<p> <b>Explanation</b>:1073 + 853 = 1926.</p></div><br/>
+<p> <b>Explanation</b>:2189 + 2031 + 221 = 4441.</p></div><br/>
 </p>
 </font>
 </p>
