--- a/w03-assessment.html
+++ b/w03-assessment.html
@@ -172,7 +172,7 @@ D) 1926 <BR>
 <p>
 <font color = "red">
 <span  onclick="toggle_visibility('q3');" class="view"><font color = "blue"><b>View Answer</b></font></span>
-<div id="q3" class="showanswer" style="display: none;" > <b>Ans</b> : D <br/>
+<div id="q3" class="showanswer" style="display: none;" > <b>Ans</b> : A <br/>
 <p> <b>Explanation</b>:2189 + 2031 + 221 = 4441.</p></div><br/>
 </p>
 </font>
