--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  
                   <!--li class="navitem active"> <a href="https://wcupa.zoom.us/j/6840171840?pwd=ZC90eHk4OUJ5QUlnUzdCUEd2cW5VZz09"  target="popup" onclick="window.open('https://wcupa.zoom.us/j/6840171840?pwd=ZC90eHk4OUJ5QUlnUzdCUEd2cW5VZz09','name','width=900,height=500')"  class="nav-link">Zoom</a></li-->
                  
-                 <li class="navitem active"> <a href="w00/TutorScheduleMLCFall23.pdf"  target="popup" onclick="window.open('w00/TutorScheduleMLCFall23.pdf','name','width=900,height=500')" class="nav-link"><font color = "purple"><b>Tutoring </b></font></a></li>
+                 <li class="navitem active"> <a href="https://www.wcupa.edu/sciences-mathematics/mathematics/documents/Tutor_Schedule_MLC_Fall_202_V2.pdf"  target="popup" onclick="window.open('https://www.wcupa.edu/sciences-mathematics/mathematics/documents/Tutor_Schedule_MLC_Fall_202_V2.pdf','name','width=900,height=500')" class="nav-link"><font color = "purple"><b>Tutoring </b></font></a></li>
 
  <!--######################################################################-->
 <!--SSSSSSSSSSSSSSSSSSSSSS    Dropdown tag: Office Hours   SSSSSSSSSSSSSSSSSSSS-->
