--- a/w06-assessment.html
+++ b/w06-assessment.html
@@ -269,7 +269,7 @@ D) Approximately normal, mean = 68 inches, standard deviation = 0.07 inches <BR>
 <BR>
 
 <p style="text-align: left; padding-top:15px; padding-bottom:10px; font-size:15px; color:black;">
-<b> Find the Indicated Probability or the percentage for the sampling error </b>.
+<b> Find the indicated probability or the percentage for the sampling distributions </b>.
 </p>
 <br>
 
@@ -278,13 +278,13 @@ D) Approximately normal, mean = 68 inches, standard deviation = 0.07 inches <BR>
 <!--VVVV     Problem 7      VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 7.</b> &nbsp; The distribution of weekly salaries at a large company is right skewed with a mean of $1000 and a standard deviation of $350. What is the probability that the sampling error made in estimating the mean weekly salary for all employees of the company by the mean of a random sample of weekly salaries of 50 employees will be at most $50?  
+<b>Problem 7.</b> &nbsp; The distribution of weekly salaries at a large company is right skewed with a mean of $1000 and a standard deviation of $350. What is the probability that the mean of a random sample of weekly salaries of 50 employees will be at least $1050?  
 <BR>
 </span>
 <BR>
-A) 0.3124  <BR>
-B) 0.6876  <BR>
-C) 0.3438  <BR>
+A) 1.0102  <BR>
+B) 0.8438  <BR>
+C) 0.1562  <BR>
 D) Cannot be determined, because the distribution of the population is not normal. <BR>
 <p>
 <BR>
@@ -299,8 +299,8 @@ D) Cannot be determined, because the distribution of the population is not norma
 <p>
 <font color = "red">
 <span  onclick="toggle_visibility('q7');" class="view"><font color = "blue"><b>View Answer</b></font></span>
-<div id="q7" class="showanswer" style="display: none;" > <b>Ans</b> : B <br/>
-<p> <b>Explanation</b>:  Standard Error is the standard deviation divided by the square root of n, which is 350/√50. Therefore the SE = 49.497. To get the probability of the sampling error, we need to find the area between the z score of P(950-1000)/SE and P(1050-1000)/SE is greater than z. This gives -1.01 and 1.01. Use the z tables, R or the TI-84 calculator and the area under the curve is 0.6876. 
+<div id="q7" class="showanswer" style="display: none;" > <b>Ans</b> : C <br/>
+<p> <b>Explanation</b>:  Standard Error is the standard deviation divided by the square root of n, which is 350/√50. Therefore the SE = 49.497. By doing z-score transformatio, z = (1050-1000)/49.497 = 1.0102. Use the normal table P(xbar > 1050) = P(Z>1.0102) = 1 - P(Z<1.0102) = 1 - 0.8438 = 0.1562. 
 <!--<center><img src="w04/q07.1.jpg" alt="w04-q7.1" width="300" height="130"></center>-->
 </p></div><br/>
 </font>
@@ -311,13 +311,13 @@ D) Cannot be determined, because the distribution of the population is not norma
 <!--VVVV     Problem 8      VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 8.</b> &nbsp; Scores on an aptitude test are distributed with a mean of 220 and a standard deviation of 30. The shape of the distribution is unspecified. What is the probability that the sampling error made in estimating the population mean by the mean of a random sample of 50 test scores will be at most 5 points?
+<b>Problem 8.</b> &nbsp; Scores on an aptitude test are distributed with a mean of 220 and a standard deviation of 30. The shape of the distribution is unspecified. What is the probability that the mean of a random sample of 50 test scores will be at most 225 points?
 <BR>
 </span>
 <BR>
 A) 0.881 <BR>
-B) 0.135 <BR>
-C) 0.762 <BR>
+B) 0.119 <BR>
+C) 1.1785 <BR>
 D) Cannot be determined, because the distribution of the population is not known to be normal <BR>
 <p>
 <BR>
@@ -330,8 +330,8 @@ D) Cannot be determined, because the distribution of the population is not known
 <p>
 <font color = "red">
 <span  onclick="toggle_visibility('q8');" class="view"><font color = "blue"><b>View Answer</b></font></span>
-<div id="q8" class="showanswer" style="display: none;" > <b>Ans</b> : C <br/>
-<p> <b>Explanation</b>: Standard Error is the standard deviation divided by the square root of n, which is 30/√50. Therefore the SE = 4.243. To get the probability of the sampling error, we need to find the area between the z score of P(215-220)/SE and P(225-220)/SE. The area is between the z scores of -1.1784 and 1.1784. Use the z tables, R or the TI-84 calculator and the area under the curve is 0.762. 
+<div id="q8" class="showanswer" style="display: none;" > <b>Ans</b> : A <br/>
+<p> <b>Explanation</b>: Standard Error is the standard deviation divided by the square root of n, which is 30/√50. Therefore the SE = 4.243. To get the probability, we need to find z = (225-220)/4.243 = 1.1785. Use the z tables, the area to the left of 1.1785 is 0.8807. 
 <!--center><img src="w04/q08.2.jpg" alt="w04-q8.2" width="300" height="130"></center-->
 </p></div><br/>
 </font>
@@ -348,10 +348,10 @@ D) Cannot be determined, because the distribution of the population is not known
 </span>
 
 <p class = "options"><BR>
-A) 0.9990 <BR>
-B) 0.8262 <BR>
-C) 0.1114 <BR>
-D) 0.9131 <BR>
+A) -0.6776 <BR>
+B) 0.2490 <BR>
+C) 0.6776<BR>
+D) 7.3786 <BR>
 </p>
 <BR>
 
@@ -359,7 +359,7 @@ D) 0.9131 <BR>
 <font color = "red">
 <span  onclick="toggle_visibility('q9');" class="view"><font color = "blue"><b>View Answer</b></font></span>
 <div id="q9" class="showanswer" style="display: none;" > <b>Ans</b> : B <br/>
-<p> <b>Explanation</b>: Standard Error is the standard deviation divided by the square root of n, which is 70/√90. Therefore the SE = 7.37865. To get the probability of the sampling error, we need to find the area between the z score of P(400-410)/SE and P(420-410)/SE. This is the area between -1.35526 and 1.35536. Use the z tables, R or the TI-84 calculator and the area under the curve which is 0.8262.  <br><br>
+<p> <b>Explanation</b>: Standard Error is the standard deviation divided by the square root of n, which is 70/√90. Therefore the SE = 7.37865. To get the probability, we need to find the z score of (405-410)/7.37865 = -0.6776. Use the z tables, we find P(Z < -0.6776) = 0.249.  <br><br>
 <!---
 <center><img src="w01/w01-assess-q09.3.jpg" alt="w01-q9.3" width="500" height="250"></center>--->
 </p></div><br/>
@@ -371,7 +371,7 @@ D) 0.9131 <BR>
 <!--VVVV     Problem 10    VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 10.</b> &nbsp; The amount of coffee that a filling machine puts into an 8-ounce jar is normally distributed with a mean of 8.2 ounces and a standard deviation of 0.18 ounce. Determine the percentage of samples of size 16 that will have mean amounts of coffee within 0.1 ounce of the population mean of 8.2 ounces. 
+<b>Problem 10.</b> &nbsp; The amount of coffee that a filling machine puts into an 8-ounce jar is normally distributed with a mean of 8.2 ounces and a standard deviation of 0.18 ounce. Determine the percentage of samples of size 16 that will have mean amounts of coffee within 8.1 ounce of the population mean of 8.3 ounces. 
 <BR>
 <!--center><img src="w04/q10.1.jpg" alt="w04-q10.1" width="230" height="120"></center--->
 </span>
