--- a/notes/w08-LogicConceptsOfHT.html
+++ b/notes/w08-LogicConceptsOfHT.html
@@ -1612,8 +1612,10 @@ have an equal sign (<span class="math inline">\(\ne, &gt;,
 &lt;\)</span>). <font color="red"><b> For a given problem, we need to
 identify the claim and write it explicitly.</b></font></p>
 <p>Some of the keywords are helpful for identifying the claim:</p>
-<p><strong>at most</strong> implies <span class="math inline">\(\ge\)</span>;</p>
-<p><strong>at least</strong> implies <span class="math inline">\(\le\)</span>;</p>
+<p><strong>at most</strong> is equivalent to <strong>less than or equal
+to</strong>, i.e., <span class="math inline">\(\le\)</span>;</p>
+<p><strong>at least</strong> is equivalent to <strong>greater than or
+equal to</strong>, i.e., <span class="math inline">\(\ge\)</span>;</p>
 <p><strong>differs</strong> implies <span class="math inline">\(\ne\)</span>;</p>
 <p><strong>majority</strong> implies that proportion is greater than
 0.5, i.e., <span class="math inline">\(p &gt; 0.5\)</span>.</p>
