--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
 
   <ul>
     <li><b>Time</b>: The exam will take place between 3:30PM and 5:30 PM, Tuesday, 12/13. <br>
-      <font color="red"><b>Caution:</b></font> Unlike in midterm exams, you can choose slot within a 24 hour-window to complete the exam, the final exam must start at 3:30 PM and complete by 5:30 PM on Tuesday, 12/13.<font color = "red">There will be NO make-up final exam!</font></li>
+      <font color="red"><b>Caution:</b></font> Unlike in midterm exams, you can choose slot within a 24 hour-window to complete the exam, the final exam have only one slot: 3:30 PM - 5:30 PM. The exam will be available on D2L at 3:30 PM. You have to compelete it by 5:30 PM (The system will automatically submit whatever you have completed at 5:30 PM and then close the exam). I will not be able to reopen the exam afterwoard. <font color = "red">There will be NO make-up final exam!</font></li>
     <li><b>Format</b>: Closed-book exam with only multiple-choice questions. The exam will be administered through D2L (similar to the midterm exams).</li>
     <li><b>Length</b>: 120 minutes (No extension).</li>
     <li><b>Logistics</b>: A formula sheet (with only formulas) and a scientific or graphical calculator are allowed. Statistical tables will be povided.</li>
