--- a/notes/w10-t-paired-ttest.html
+++ b/notes/w10-t-paired-ttest.html
@@ -1548,7 +1548,7 @@ text-align: left;
 <p>In this note, we discuss the hypothesis test of the means of
 <strong>normal populations</strong> with the assumption that the
 population variances are unknown. Unlike the normal test we discussed
-earlier, the sampling distribution of the sample means is NOT a moral
+earlier, the sampling distribution of the sample means is NOT a normal
 distribution. We will introduce a new distribution to characterize the
 random behavior of the test statistic.</p>
 <p>As an application, we also introduce a special procedure to test the
