--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 
         <li> Study materials</li>
           <ul>
-            <li>Correlation and linear regression [Lecture Note] </li>
+            <li>Review of hyperthesis testing [Lecture Note]. </li>
                  <a href="notes/w11-HTReview.html" target="popup" 
                           onclick="window.open('notes/w11-HTReview.html','name','width=900,height=500')">
                          [HTML] </a> 
@@ -855,7 +855,7 @@
            </ul>   
     </li>
               
-<font color = "red"><b>There will be not weekly exam for this week.</b></font> <font color = "blue"><b>Please review the weekly quizzes from week #8 to week #11 and the online practice and make sure you understand the concepts and procedures for conducting hypothesis testing. </b></font>    
+<font color = "red"><b>There will be not weekly exam for this week.</b></font> <font color = "blue"><b>Please review the weekly quizzes from week #8 to week #11 and make sure you understand the concepts and procedures for conducting hypothesis testing. </b></font>    
     
 <!-- MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
                       Exam Three
