--- a/index.html
+++ b/index.html
@@ -849,8 +849,8 @@
                  <a href="notes/w11-HTReview.html" target="popup" 
                           onclick="window.open('notes/w11-HTReview.html','name','width=900,height=500')">
                          [HTML] </a> 
-                 <a href="notes/w11-HTReview..pdf" target="popup" 
-                          onclick="window.open('notes/w11-HTReview..pdf','name','width=900,height=500')">
+                 <a href="notes/w11-HTReview.pdf" target="popup" 
+                          onclick="window.open('notes/w11-HTReview.pdf','name','width=900,height=500')">
                          [PDF] </a>
            </ul>   
     </li>
