--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 <!-- MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
 <!-- VVVVVVVVVVVVVVVVV     Week #11    VVVVVVVVVVVVVVVVVV-->
 <!-- VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV-->
-<h6 id="week11x"  class="section" style="text-align:center"><font size = 4><b>Review of Midterm Exam #3: Testing Hypotheses</b></font>
+<h6 id="week11x"  class="section" style="text-align:center"><font size = 4><b>Topic #12. Review of Midterm Exam #3: Testing Hypotheses</b></font>
     <br><center><font size = 3 color = "blue">[11/13 - 11/17]</font></center></h6>
 <hr>
  <ul>
