--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
     <li><b>Make-up exam.</b> Since you have a wide time window to start your exam, <b>there will be <font color = "red">no make-up</font> midterm exam #3. </b></li>
     </ul>
     
-      <!--li> <a href="Exams/MAT121F22MidtermExam01-Peng.pdf"  target="popup" onclick="Exams/MAT121F22MidtermExam01-Peng.pdf','name','width=900,height=500')" ><font color = "red">Midterm Exam #1 Answer Key</font></a></li-->   
+      <li> <a href="Exams/MAT121F23ActuallyUsedExam03-key.pdf"  target="popup" onclick="Exams/MAT121F23ActuallyUsedExam03-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Midterm Exam #3 Answer Key</b></font></a></li>   
     </ul>
     <br>
     <center><font color = "blue" size = 4><b>Happy Thanksgiving!</b></font></center>
