--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
         </ul>
     <li> Study materials</li>
           <ul>
-            <li>Correlation and linear regression [Lecture Note] <br>
+            <li>Goodness-of-fit test [Lecture Note] <br>
                  <a href="notes/w13-Chisq-Goodness-of-fit.html" target="popup" 
                           onclick="window.open('notes/w13-Chisq-Goodness-of-fit.html','name','width=900,height=500')">
                          [HTML] </a> 
