--- a/index12.html
+++ b/index12.html
@@ -82,15 +82,14 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                 <nav> 
                 <div class="main-menu">
                  <ul id="nav">
-                    <li class="first"><a href="w00/00-STA490-SyllabusWS-SP2023.pdf"><font color = "#0F3483">Syllabus</font></a></li>
-                    <li><a href=""><font color = "#0F3483">Learning Strategies</font><span class="a-inner"></span></a> 
-                        <!-- Drop-down manual-->
-                        <div><ul>
-                             <li><a href="file:///C:/Users/75CPENG/OneDrive%20-%20West%20Chester%20University%20of%20PA/Desktop/cpeng/WCU-Teaching/2024Spring/MAT121/OnlineLearningStrategies.png" target="popup" 
-                onclick="window.open('file:///C:/Users/75CPENG/OneDrive%20-%20West%20Chester%20University%20of%20PA/Desktop/cpeng/WCU-Teaching/2024Spring/MAT121/OnlineLearningStrategies.png','name','width=900,height=500')">
-                         <img src="img/LearningStrategyIcon.png" width="70" height="100"></a></li>
-                            </ul>
-                        </div></li>                   
+
+                      <li><li class="first"><a href="w00/MAT121Syllabus.pdf" target="popup" 
+                onclick="window.open('w00/MAT121Syllabus.pdf','name','width=900,height=500')">
+                    <font color = "#0F3483"> Syllabus</font></a></li>
+                     
+                   <li><li class="first"><a href="OnlineLearningStrategies.png" target="popup" 
+                onclick="window.open('OnlineLearningStrategies.png','name','width=900,height=500')">
+                    <font color = "#0F3483"> Learning Strategies</font></a></li>                    
                      
                      <li><a href=""><font color = "#0F3483">Office Hours</font><span class="a-inner"></span></a> 
                         <!-- Drop-down manual-->
