--- a/index03.html
+++ b/index03.html
@@ -259,7 +259,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                   <ul>
                       <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
                       <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-                      <!---li>c. <a href="HW/week03-quiz-key.pdf"  target="popup" onclick="HW/week03-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key</font></a></li--> 
+                      <li>c. <a href="HW/week03-quiz-key.pdf"  target="popup" onclick="HW/week03-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Quiz #3</b></font></a></li> 
                   </ul>   
          </ol>       
   </td>
