--- a/index12.html
+++ b/index12.html
@@ -212,7 +212,14 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
      <h5>Topics and Notes </h5>
      <ol style="line-height: 1.5em; margin-bottom: 15px">
    
-   <li> Two-sample confidence intervals</li>
+   <li> Concepts of Correlation Coefficient</li>
+         <ul>
+         <li>Study section 2 of this note <a href="notes/w12-CorrelationRegression.html" target="popup" 
+                          onclick="window.open('notes/w12-CorrelationRegression.html','name','width=900,height=500')">
+                         <link-btn>[HTML LINK]</link-btn></a></li>
+         <li>One ISLA calculates the correlation coefficient and other least square regression coefficients. You can find the app at <a href="https://chengpeng.shinyapps.io/correlation-reg/"  target="popup" onclick="window.open('https://chengpeng.shinyapps.io/correlation-reg/','name','width=900,height=500')"> 
+             <link-btn>[INTERACTIVE APPS]</link-btn> </a></li>
+         </ul>
    
    <li> Review of exam #3</li>
          <ul> 
