--- a/exam03.html
+++ b/exam03.html
@@ -210,7 +210,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
     <h3 id = "week01"> Information of Midterm Exam #3</h3>
     
     <ul>
-    <li><b>Coverage</b>: All topics covered from week #8 to week #11 (Sampling distribution and confidence intervals).</li>
+    <li><b>Coverage</b>: All topics covered from week #8 to week #11 (from the concepts of testing hypothesis to one-sample, two-sample, and paired t test).</li>
     <li><b>Time</b>: The exam will be administered through D2L. You can start the exam any time between <font color = "navy"><b>12:00 PM (Thursday, 4/18)</b></font> and <font color = "blue"><b>10:30 AM (Friday, 4/19)</b></font>. <font color = "red">Once you start the exam, the clock starts counting down. You have to submit the exam within 90 minutes! The exam will automatically close after 90 minutes. </font></li>
     <li><b>Format</b>: There will be 25 multiple-choice questions only. Everyone will have a slightly different problem set with similar problems.</li>
     <li><b>Length</b>: The exam takes 90 minutes.</li>
