--- a/exam03.html
+++ b/exam03.html
@@ -217,8 +217,8 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
     <li><b>Logistics</b>: To guarantee that you will have 90 minutes of quality time to complete the exam, you should prepare a formula sheet ahead of time and a scientific or graphical calculator for the exam. You are also encouraged to print out statistical tables that are on the course web page.</li>
     <li><b>Make-up exam.</b> Since you have a wide time window to start your exam, <b>there will be <font color = "red">no make-up</font> midterm exam #3. </b></li>
     </ul>
-    
-      <!--li> <a href="Exams/MAT121F23ActuallyUsedExam03-key.pdf"  target="popup" onclick="Exams/MAT121F23ActuallyUsedExam03-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Midterm Exam #3 Answer Key</b></font></a></li-->   
+    <br>
+      <a href="Exams/MAT121SP2024MidtermExam02-key.pdf"  target="popup" onclick="Exams/MAT121SP2024MidtermExam02-key.pdf','name','width=900,height=500')" ><font color = "blue" size = 3><b>Midterm Exam #3 Answer Key [link]</b></font></a></li>   
 
         
   </td>
