--- a/Practice/w02-assessment.html
+++ b/Practice/w02-assessment.html
@@ -146,7 +146,7 @@ D) 20<BR>
 <!--VVVV     Problem 3      VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 3.</b> &nbsp; Use the given frequency distribution to approximate the mean.
+<b>Problem 3.</b> &nbsp; Use the given frequency distribution to <b>approximate</b> the mean.
 <BR><BR>
 <center> <img src="w02/w02-assess-q03.jpg" alt="w02-q03" width="200" height="120"></center>
 </span>
@@ -164,7 +164,7 @@ D) 30.4<BR>
 <font color = "red">
 <span  onclick="toggle_visibility('q3');" class="view"><font color = "blue"><b>View Answer</b></font></span>
 <div id="q3" class="showanswer" style="display: none;" > <b>Ans</b> : C <br/>
-<p> <b>Explanation</b>: Use the steps in a worked example in the class note.</p></div><br/>
+<p> <b>Explanation</b>: This is an approximation problem. From the frequency table, we know that there are 19 numbers between 0 and 19, we choose the middle number (0 + 19)/ 2 = 9.5 to represent these 19 numbers. That is, we pretend there are 19 copies of 9.5 in the first class. We also know that there are 17 numbers between 20 and 39, we use the middle number in the class which is (20 + 39)/2 = 29.5. Following the same logic, we pretend to have 17 copies of 29.5 in the second class. keep doing this, we have average: (19 * 9.5 + 17 * 29.5 + 12 * 49.5 + 12 * 69.5 + 19 * 89.5) / (19 + 17 + 12 +12 +19) = 48.23418.  Choose the one that is closest to 48.23418. Therefore, the answer is <b>C</b>. </p></div><br/>
 </p>
 </font>
 </p>
