--- a/index02.html
+++ b/index02.html
@@ -262,7 +262,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
              <ul>
                <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
                <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-               <!--li> <a href="HW/week02-quiz-key.pdf"  target="popup" onclick="HW/week02-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Weekly Quiz #2</b></font></a></li--> 
+               <li> <a href="HW/week02-quiz-key.pdf"  target="popup" onclick="HW/week02-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Weekly Quiz #2</b></font></a></li> 
               </ul>   
          </ol>       
   </td>
