--- a/exam01.html
+++ b/exam01.html
@@ -212,11 +212,12 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
     
     <ul>
     <li><b>Coverage</b>: All topics covered from week #1 to week #4.</li>
-    <li><b>Time</b>: The exam will be administered through D2L. You can start the exam any time <font color = "blue">between 12:00 PM (<b>Thursday</b>, 9/26) and 10:30 AM (<b>Friday</b>, 9/27)</font>. <font color = "red">Once you start the exam, the clock starts counting down. You have to submit the exam within 120 minutes! The exam will automatically close after 120 minutes. </font></li>
-    <li><b>Format</b>: There will be 35 multiple-choice questions only. Everyone will have a slightly different problem set with similar problems.</li>
-    <li><b>Length</b>: The exam takes 120 minutes.</li>
-    <li><b>Logistics</b>: To guarantee that you will have 90 minutes of quality time to complete the exam, you should prepare a formula sheet ahead of time and a scientific or graphical calculator for the exam. You are also encouraged to print out statistical tables that are on the course web page.</li>
-    <li><b>Make-up exam.</b> Since you have a wide time window to start your exam, there will be no midterm exam. </li>
+    <li><b>Time</b>: The exam will be administered through D2L. You can start the exam (at any time) <font color = "blue">between 12:00 PM (<b>Thursday</b>, 9/26) and 10:30 AM (<b>Friday</b>, 9/27)</font>. <font color = "red">. Once you begin the exam, the clock starts counting down. You have to submit the exam within 120 minutes! The exam will automatically close after reaching the 120-minute limit.</font></li>
+
+    <li><b>Format</b>: There will be 35 multiple-choice questions only. Everyone will have a slightly different problem set with similar types of problems.</li>
+    <li><b>Length</b>: The exam takes 120 minutes. This is <b>different</b> from the weekly quiz that allowed three and half days to complete. </li>
+    <li><b>Logistics</b>: To guarantee that you will have 120 minutes of quality time to complete the exam, you should prepare a formula sheet ahead of time and a scientific or graphical calculator for the exam. You are also encouraged to print out the normal table that is available on the course web page.</li>
+    <li><b>Make-up exam.</b> Since you have a wide time window to start your exam, there will be no <b>make-up</b> midterm exam. </li>
     </ul>
     
      <br>   
