--- a/index07.html
+++ b/index07.html
@@ -259,8 +259,8 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
             <ul>
               <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
               <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-               <!--li>  <a href="HW/week07-quiz-key.pdf"  target="popup" onclick="HW/week07-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key </font>
-                   </a></li-->
+              <li>  <a href="HW/week07-quiz-key.pdf"  target="popup" onclick="HW/week07-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Quiz #7 </b></font>
+                   </a></li>
             </ul>  
           </ol>         
   </td>
