--- a/exam02.html
+++ b/exam02.html
@@ -217,7 +217,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
     <li><b>Make-up exam.</b> Since you have a wide time window to start your exam, there will be no make-up midterm exam. </li>
     </ul>
     
-      <!--br> <a href="Exams/MAT121SP2024MidtermExam02-key.pdf"  target="popup" onclick="Exams/MAT121SP2024MidtermExam02-key.pdf','name','width=900,height=500')" ><font color = "blue"><b>Midterm Exam #2 Answer Key</b></font></a></li--> 
+      <br> <a href="Exams/MAT121F24MidtermExam02-key.pdf"  target="popup" onclick="Exams/MAT121F24MidtermExam02-key.pdf','name','width=900,height=500')" ><font color = "blue"><b>Midterm Exam #2 Answer Key</b></font></a></li> 
 
 
         
