--- a/index04.html
+++ b/index04.html
@@ -259,7 +259,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
             <ul>
               <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
               <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-              <li> Weekly Quiz #4: <a href="HW/week04-quiz-key.pdf"  target="popup" onclick="HW/week04-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key</b></font></a></li> 
+              <!--li> Weekly Quiz #4: <a href="HW/week04-quiz-key.pdf"  target="popup" onclick="HW/week04-quiz-key.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key</b></font></a></li--> 
               </ul>     
          </ol>       
   </td>
