--- a/index09.html
+++ b/index09.html
@@ -277,16 +277,16 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                             <li><a href="index02.html" class="nav-link">2. Numerical Measures</a></li>
                             <li><a href="index03.html" class="nav-link">3. Concepts of Probability</a></li>
                             <li><a href="index04.html" class="nav-link">4. Normal Distributions</a></li>
-                             <li><a href="exam01.html" class="nav-link"><center><font color = "red"> Midterm Exam 1 [Thursday]</font></center></a>
+                             <li><a href="exam01.html" class="nav-link"><center><font color = "red"> Midterm Exam 1 [Thu, 2/13]</font></center></a>
                             <li><a href="index05.html" class="nav-link">5. Sampling Distributions </a> </li>
                             <li><a href="index06.html" class="nav-link">6. Z-Confidence Intervals </a></li>    
 				            <li><a href="index07.html" class="nav-link">7. t-confidence Intervals </a></li> 
-                              <li><a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday]</font></center></a>
+                              <li><a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thu, 3/6]</font></center></a>
                             <li><a href="index08.html" class="nav-link">8. Testing Hypotheses </a></li>
                             <li><a href="index09.html" class="nav-link">9. One-sample Normal Tests </a> </li> 
                             <li><a href="index10.html" class="nav-link">10. t and Paired t-tests</a> </li> 
 				            <li><a href="index11.html" class="nav-link">11. Two-sample Tests</a> </li>  
-                             <li><a href="exam03.html" class="nav-link"><center><font color = "red"> Midterm Exam 3 [Thursday]</font></center></a>
+                             <li><a href="exam03.html" class="nav-link"><center><font color = "red"> Midterm Exam 3 [Thu, 4/10]</font></center></a>
                             <li><a href="index12.html" class="nav-link">12. 2-sample Confidence Intervals</a> </li>
 				            <li><a href="index13.html" class="nav-link">13. Correlation and Regression</a> </li>
                             <li><a href="index14.html" class="nav-link">14. Chisquare tests </a> </li>
