--- a/Practice/w02-assessment.html
+++ b/Practice/w02-assessment.html
@@ -146,7 +146,7 @@ D) 20<BR>
 <!--VVVV     Problem 3      VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 3.</b> &nbsp; Use the given frequency distribution to <b>approximate</b> the mean.
+<b>Problem 3.</b> &nbsp; (<b><font color = "red">Optional</font></b>) Use the given frequency distribution to <b>approximate</b> the mean.
 <BR><BR>
 <center> <img src="w02/w02-assess-q03.jpg" alt="w02-q03" width="200" height="120"></center>
 </span>
