--- a/index15.html
+++ b/index15.html
@@ -256,6 +256,10 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
   </tr>
 </table>
 
+            <ul>
+        <font color = "red">  <b>Note:</b>For those who requested accommodation, please sign up for a time slot with the OEA Proctoring Center at</font> <a href="https://westchester-accommodate.symplicity.com/"><font = color = "blue">https://westchester-accommodate.symplicity.com/</font></a> <font color = "red"> as early as possible.</font>  
+        </ul>
+        
     <li><b>Format</b>: There will be multiple-choice questions and word problems. Everyone will have a slightly different problem set with similar types of problems.</li>
     <li><b>Length</b>: The exam takes 75 minutes. </li>
     <li><b>Logistics</b>: You are also encouraged to print out the normal table that is available on the course web page.</li>
