--- a/exam03.html
+++ b/exam03.html
@@ -241,17 +241,21 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
   <tr>
     <td>MAT121-04 (Morning)</td>
     <td>8:00 AM-9:15 AM</td>
-    <td>Thursday</td>
+      <td><font color="red"><b>Thursday, 4/17/2025</b></font></td>
     <td>UNA158</td>
   </tr>
   <tr>
     <td>MAT121-01 (Afternoon)</td>
     <td>2:00 PM-3:15 PM</td>
-    <td>Thursday</td>
+    <td><font color="red"><b>Thursday,  4/17/2025</b></font></td>
     <td>UNA155</td>
   </tr>
 </table>
 
+            <ul>
+        <font color = "red">  <b>Note:</b>For those who requested accommodation, please sign up for a time slot with the OEA Proctoring Center at</font> <a href="https://westchester-accommodate.symplicity.com/"><font = color = "blue">https://westchester-accommodate.symplicity.com/</font></a> <font color = "red"> as early as possible.</font>  
+        </ul>
+        
     <li><b>Format</b>: There will be multiple-choice questions and word problems. Everyone will have a slightly different problem set with similar types of problems.</li>
     <li><b>Length</b>: The exam takes 75 minutes. </li>
     <li><b>Logistics</b>: You are also encouraged to print out the normal table that is available on the course web page.</li>
