--- a/index07.html
+++ b/index07.html
@@ -235,8 +235,8 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
          <h5>Practice and Interactive Apps </h5>
           <ol style="line-height: 1.5em; margin-bottom: 15px">
                   
-            <li> Practice exercises #07 <a href="Practice/w07-assessment02.html" target="popup" 
-                          onclick="window.open('Practice/w07-assessment02.html','name','width=900,height=500')">
+            <li> Practice exercises #07 <a href="Practice/w07-assessment.html" target="popup" 
+                          onclick="window.open('Practice/w07-assessment.html','name','width=900,height=500')">
                           </a>
             <li> <font color = "red">[Optional]</font>Read section 8.3 of Navidi's textbook </li>  
             <li><font color = "red"><b>Interactive statistics learning apps</b></font>
