--- a/notes/w09-NormalTests.html
+++ b/notes/w09-NormalTests.html
@@ -1850,7 +1850,8 @@ panel.</p>
 <!--center><a href="https://mat121.s3.amazonaws.com/ZTest-Pval.mp4"><img src = "https://github.com/pengdsci/MAT121/blob/main/VideoIcon.png?raw=true" width="400" height="250"></a--></p>
 <p><font color="red">Note that the App requires the <strong>standard
 deviation of the sample</strong>. If you are given the sample variance,
-you need to take square of it to get the standar deviation.</font></p>
+you need to take square root of it to get the standard
+deviation.</font></p>
 <p><br />
 </p>
 </div>
