--- a/notes/w09-NormalTests.html
+++ b/notes/w09-NormalTests.html
@@ -1743,9 +1743,8 @@ distribution of <span class="math inline">\(TS\)</span> is a standard
 normal distribution. Since this is a two-tailed test, the p-value is
 equal to the smaller tail area times 2. That is, p-value = <span class="math inline">\(2 \times 0.0035 = 0.007\)</span>. The following
 figure shows the way of finding the p-value.</p>
-<p><strong>Step 5</strong>: Decision rule. Since the p-value = 0.07 &lt;
-0.05 (default significance), we reject <span class="math inline">\(H_o:
-\  \mu = 8\)</span>.</p>
+<p><strong>Step 5</strong>: Decision rule. Since the p-value = 0.007
+&lt; 0.05 (default significance), we reject <span class="math inline">\(H_o: \  \mu = 8\)</span>.</p>
 <p><strong>Step 6</strong>: Based on the decision made in <strong>step
 5</strong> and the relationship between the claim in <strong>step
 1</strong> and the hypotheses in <strong>step 2</strong>, the sample
