--- a/index15.html
+++ b/index15.html
@@ -226,7 +226,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
       
      <div id="svdbanner"> 
          <br>
-           <marquee> <a href="https://pengdsci.github.io/MAT121/OnlineLearningStrategies.png"  target="_blank"  onclick="window.open('https://pengdsci.github.io/MAT121/OnlineLearningStrategies.png','name','width=900,height=500')"> <font color = "blue" size = 5> Final Exam is In-Person and Proctored – No Make-Up Exams!</font> </a></marquee>   
+           <marquee> <a href="https://pengdsci.github.io/MAT121/OnlineLearningStrategies.png"  target="_blank"  onclick="window.open('https://pengdsci.github.io/MAT121/OnlineLearningStrategies.png','name','width=900,height=500')"> <font color = "blue" size = 5> Final Exam is In-Person and Proctored – No Make-Up Final!</font> </a></marquee>   
       
   <table class="center" style="width:95%" border = "0" id="container">
     <tr>
