--- a/exam03.html
+++ b/exam03.html
@@ -212,14 +212,14 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
     <td>             
     <h3 id = "week01"> Information of Midterm Exam #3</h3>
         <br>
-        <center><a href="ExamInstructions.png"><font color = "red"><b>Exam Instructions [Link]</b></font></a></center>
+                <center><a href="ExamInstructions.png"  target="_blank" onclick="ExamInstructions.png','name','width=900,height=500')" ><font color = "red"><b>Exam Instructions [Link]</b></font></a></center>
         <br>
         
     <ul>
     <li><b>Coverage</b>: All topics covered from week #8 to week #11 (from the concepts of testing hypothesis to one-sample, two-sample, and paired t tests).</li>
     <br>    
                
-    <li><b>Exam Schedule</b>: The exam schedule for the two sections is given below <br>
+    <li><b>Exam Schedule</b>: <br>
       <center><font color="red"><b>Thursday, 11/13/2025</b></font> </center>
 
          <ul>
