--- a/index05.html
+++ b/index05.html
@@ -281,7 +281,12 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
            <h5>Weekly Assignments </h5> 
              <ol style="line-height: 1.5em; margin-bottom: 15px">  
             
-                   <font color = "red">There is no week's Assignment this week due to midterm exam #1 scheduled on Thursday, 9/26/24.</font>        
+                    <li> <font color = "blue">This week's Assignment (Weekly quiz)</font>
+            <ul>
+              <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
+              <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
+              <!--li> <a href="HW/week04-quiz-key.pdf"  target="popup" onclick="HW/week04-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key</font></a></li--> 
+              </ul>       
                </ol>    
         
                  <!--a href="Exams/MAT121S24MidtermExam01-Peng.pdf"  target="_blank" onclick="MAT121S24MidtermExam01-Peng.pdf','name','width=900,height=500')" ><font color = "red"><b>Answer Key to Midterm Exam #1</b></font></a-->
