--- a/index11.html
+++ b/index11.html
@@ -306,12 +306,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
        <h5>Weekly Assignments </h5> 
             <ol style="line-height: 1.5em; margin-bottom: 15px">  
             
-             <li> <font color = "darkred">This week's assignments (Weekly Quiz)</font></li>
-               <ul>
-                  <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
-                  <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-               <!--li> <a href="HW/week11-quiz-key.pdf"  target="popup" onclick="HW/week11-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key </font></a></li-->
-               </ul>  
+             <li> <font color = "darkred">There is no assignment for this week due to midterm exam #3.</font></li> 
           </ol> 
   </td>
   
